syntax = "proto3";

option csharp_namespace = "GrpcProduct.Get";

package ProductApi;

message PagingInfo {
	int32 page_index = 1;
	int32 page_size = 2;
}

message GetProductRequest {
	string db_name = 1;
	string category = 2;
	PagingInfo page_info = 3;
}

message Image {
	string thumb = 1;
	string large = 2;
	string variant = 3;
	optional string hires = 4;
}

message ProductItemResponse {
	optional string main_category = 1;
	optional string title = 2;
	optional double average_rating = 3;
	optional double rating_number = 4;
	optional string price = 5;
	repeated Image images = 6;
	optional string store = 7;
	repeated string categories = 8;
}

message GetProductResponse {
	repeated ProductItemResponse data = 1;
	optional bool has_next = 2;
	optional PagingInfo page_info = 3;
}

message GetProductByIdRequest {
	string db_name = 1;
	repeated string ids = 2;
}

message GetProductByIdResponse {
	repeated ProductItemResponse data = 1;
}

service GetProductService {
	rpc GetItem (GetProductRequest) returns (GetProductResponse);
	rpc GetById (GetProductByIdRequest) returns (GetProductByIdResponse);
}